fixed the xss attack issue. Now the browser won't activate the html tags. changed the style of the adminDashboard now the long texts won't overlap with other texts.

--- a/Login/FrontEnd/CSS/adminDashboard.css
+++ b/Login/FrontEnd/CSS/adminDashboard.css
@@ -18,6 +18,10 @@ body {
     flex-direction: column;
 }
 
+.dt-input{
+    margin-right: 5px;
+}
+
 .wrapper {
     width: 75%;
     background-color: rgba(0, 0, 0, .1);
@@ -105,6 +109,9 @@ td,
 tfoot {
     text-align: center;
     vertical-align: middle;
+    max-width: 100%;
+    word-wrap: break-word;
+    white-space: normal !important;
 }
 
 .input-box{
